--- a/packages/toc/notebooks/demo.ipynb
+++ b/packages/toc/notebooks/demo.ipynb
@@ -2,9 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "toc-hr-collapsed": false
-   },
+   "metadata": {},
    "source": [
     "# Notebook Title"
    ]
@@ -58,9 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "toc-hr-collapsed": false
-   },
+   "metadata": {},
    "source": [
     "## Heading"
    ]
@@ -121,9 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "toc-hr-collapsed": false
-   },
+   "metadata": {},
    "source": [
     "## Heading"
    ]
@@ -159,7 +153,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Subheading"
+    "### Subsection"
    ]
   },
   {
