Add output generation cells without Markdown/HTML

--- a/packages/toc/notebooks/demo.ipynb
+++ b/packages/toc/notebooks/demo.ipynb
@@ -661,6 +661,71 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Programmatic Output (no Markdown)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/json": [
+       1,
+       2,
+       3
+      ],
+      "text/plain": [
+       "<IPython.core.display.JSON object>"
+      ]
+     },
+     "metadata": {
+      "application/json": {
+       "expanded": false,
+       "root": "root"
+      }
+     },
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/json": [
+       4,
+       5,
+       6
+      ],
+      "text/plain": [
+       "<IPython.core.display.JSON object>"
+      ]
+     },
+     "metadata": {
+      "application/json": {
+       "expanded": false,
+       "root": "root"
+      }
+     },
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from IPython.display import JSON, display\n",
+    "\n",
+    "display(JSON([1,2,3]))\n",
+    "display(JSON([4,5,6]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Subsection"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Notes\n",
     "\n",
     "-   Markdown cells containing multiple \"sections\" only show as the first section in the ToC. Accordingly, users should add a **new** Markdown cell for **each** section.\n",
