--- a/packages/toc/notebooks/demo.ipynb
+++ b/packages/toc/notebooks/demo.ipynb
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -719,7 +719,58 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Subsection"
+    "### Subsection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/json": [
+       1,
+       2,
+       3
+      ],
+      "text/plain": [
+       "<IPython.core.display.JSON object>"
+      ]
+     },
+     "metadata": {
+      "application/json": {
+       "expanded": false,
+       "root": "root"
+      }
+     },
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/json": [
+       4,
+       5,
+       6
+      ],
+      "text/plain": [
+       "<IPython.core.display.JSON object>"
+      ]
+     },
+     "metadata": {
+      "application/json": {
+       "expanded": false,
+       "root": "root"
+      }
+     },
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from IPython.display import JSON, display\n",
+    "\n",
+    "display(JSON([1,2,3]))\n",
+    "display(JSON([4,5,6]))"
    ]
   },
   {
