Initial support for handling msgs for other cells

--- a/examples/index.ipynb
+++ b/examples/index.ipynb
@@ -13,6 +13,17 @@
     "result = add(1, 2)\n",
     "print(result)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i = 0\n",
+    "i += 1\n",
+    "print(i)"
+   ]
   }
  ],
  "metadata": {
