Add a note about the server logs

--- a/binder/README
+++ b/binder/README
@@ -11,3 +11,5 @@ Please note that this setup is developer focused.
 For a more user-focused Binder use this URL:
 
 https://mybinder.org/v2/gh/jupyterlab/jupyterlab-demo/master?urlpath=lab/tree/demo/Lorenz.ipynb
+
+If there is an error with the launched application, you can browse to the ` `/edit/jupyterlab-dev.log` url to see the server logs.
